# EcoFarm_Human

./: .env.example  .gitignore  README.md  pyproject.toml  render.yaml  requirements.txt
.github/workflows/: README.md  deploy-ai-recs-staging.yml  deploy-ai-recs.yml  deploy-auth-staging.yml  deploy-auth.yml  deploy-farms-staging.yml  deploy-farms.yml  deploy-weather-staging.yml  synthetic-checks.yml
Docs/Overall Project/: 00_START_HERE.md  IMPLEMENTATION_COMPLETE.md  INDEX.md  MVP_Considerations_&_Trade-offs.txt  PROJECT_COMPLETION_REPORT.md  README.md  SOLO_SETUP_GUIDE.md  Tech_Stack_Alternatives_&_Trade-offs.txt  Tech_Stack_Research_Backend_&_API_Technologies.txt  VISUAL_SUMMARY.md  ai-models-and-usage.md  architecture-overview.md  deployment-guide.md  modular-architecture.md  onboarding.md  runbook.md  sprint-plan.md  supabase-setup.md  tamilnadu-data-sources.md
alembic/: env.py  script.py.mako
alembic/versions/: 0001_initial.py  0002_add_weather_cache.py  0003_add_ai_recommendations.py
common/: __init__.py  config.py  db.py
scripts/: run_services.ps1
services/ai_recs/: README.md  crud.py  main.py  models.py  requirements.txt  schemas.py
services/auth/: README.md  crud.py  main.py  models.py  requirements.txt  schemas.py
services/farms/: README.md  __init__.py  crud.py  main.py  models.py  schemas.py
services/shared/: AXIOM_SETUP.md  LOGGING_USAGE.md  logging_config.py
tests/: test_ai_recs.py  test_auth_endpoints.py  test_auth_root.py  test_farms_endpoints.py  test_farms_root.py  test_weather_cache.py  test_weather_root.py
(+29 files in other folders)
